# gumol_microdrop

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  sample_experimental_results.csv  sample_simulation.json
src/: data_models.rs  lib.rs  main.rs
src/eprotein/: mod.rs  models.rs
src/modules/: correlation_analyzer.rs  eprotein_screen.rs  experiment_designer.rs  mod.rs  nuclera_generator.rs  parameter_translation.rs  protocol_generator.rs  simulation_importer.rs
src/ui/: card_editor.rs  data_viewer.rs  experiment_design.rs  mod.rs  nuclera_config.rs  parameter_mapping.rs  protocol_generator.rs  simulation_importer.rs
src/ui/eprotein/: design.rs  mod.rs  placeholders.rs  screen_palette.rs
src/visualization/: droplet_grid.rs  mod.rs
